@@ -4,6 +4,7 @@
   * Bug #3071698: Replace co_div64 with more accurate div64_32 from linux-2.6.33.5
   * scsi: Reading disk from offset at 1TB and above was faulted with
     end_request: I/O error, dev sda, sector 2147483648
+  * scsi: Set scsi_level = SCSI_SPC_2, supress warning "READ CAPACITY(16) failed".
 
   Kernel:
   * Update Linux kernel to 2.6.33.7
